--- a/content/cours/06-modbayes.html
+++ b/content/cours/06-modbayes.html
@@ -96,34 +96,34 @@ où <span class="math inline">\(f(\boldsymbol{y}) = \int f(\boldsymbol{y}|\theta
 <tr class="header">
 <th align="left">Interprétation de l’<em>a priori</em></th>
 <th align="left">Paramètres de la Beta</th>
-<th align="center"><span class="math inline">\(P(\theta\geq 0.5|\boldsymbol{y})\)</span></th>
+<th align="center"><span class="math inline">\(P(\theta\geq 0,5|\boldsymbol{y})\)</span></th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
 <td align="left">#garçons <span class="math inline">\(&gt;\)</span> #filles</td>
-<td align="left"><span class="math inline">\(\alpha=0.1, \beta=3\)</span></td>
-<td align="center"><span class="math inline">\(1.08~10^{-42}\)</span></td>
+<td align="left"><span class="math inline">\(\alpha=0,1; \beta=3\)</span></td>
+<td align="center"><span class="math inline">\(1,08~10^{-42}\)</span></td>
 </tr>
 <tr class="even">
 <td align="left">#garçons <span class="math inline">\(&lt;\)</span> #filles</td>
-<td align="left"><span class="math inline">\(\alpha=3,\phantom{.1}\beta=0.1\)</span></td>
-<td align="center"><span class="math inline">\(1.19~10^{-42}\)</span></td>
+<td align="left"><span class="math inline">\(\alpha=3\phantom{,1};\beta=0.1\)</span></td>
+<td align="center"><span class="math inline">\(1,19~10^{-42}\)</span></td>
 </tr>
 <tr class="odd">
 <td align="left">#garçons <span class="math inline">\(=\)</span> #filles</td>
-<td align="left"><span class="math inline">\(\alpha=4,\phantom{.1}\beta=4\)</span></td>
-<td align="center"><span class="math inline">\(1.15~10^{-42}\)</span></td>
+<td align="left"><span class="math inline">\(\alpha=4\phantom{,1};\beta=4\)</span></td>
+<td align="center"><span class="math inline">\(1,15~10^{-42}\)</span></td>
 </tr>
 <tr class="even">
 <td align="left">#garçons <span class="math inline">\(\neq\)</span> #filles</td>
-<td align="left"><span class="math inline">\(\alpha=0.1,\beta=0.1\)</span></td>
-<td align="center"><span class="math inline">\(1.15~10^{-42}\)</span></td>
+<td align="left"><span class="math inline">\(\alpha=0,1;\beta=0.1\)</span></td>
+<td align="center"><span class="math inline">\(1,15~10^{-42}\)</span></td>
 </tr>
 <tr class="odd">
 <td align="left">non informatif</td>
-<td align="left"><span class="math inline">\(\alpha=1,\phantom{.1}\beta=1\)</span></td>
-<td align="center"><span class="math inline">\(1.15~10^{-42}\)</span></td>
+<td align="left"><span class="math inline">\(\alpha=1\phantom{,1};\beta=1\)</span></td>
+<td align="center"><span class="math inline">\(1,15~10^{-42}\)</span></td>
 </tr>
 </tbody>
 </table>
@@ -139,34 +139,34 @@ où <span class="math inline">\(f(\boldsymbol{y}) = \int f(\boldsymbol{y}|\theta
 <tr class="header">
 <th align="left">Interprétation de l’<em>a priori</em></th>
 <th align="left">Paramètres de la Beta</th>
-<th align="center"><span class="math inline">\(P(\theta\geq 0.5|\boldsymbol{y})\)</span></th>
+<th align="center"><span class="math inline">\(P(\theta\geq 0,5|\boldsymbol{y})\)</span></th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
 <td align="left">#garçons <span class="math inline">\(&gt;\)</span> #filles</td>
-<td align="left"><span class="math inline">\(\alpha=0.1, \beta=3\)</span></td>
-<td align="center"><span class="math inline">\(0.39\)</span></td>
+<td align="left"><span class="math inline">\(\alpha=0,1; \beta=3\)</span></td>
+<td align="center"><span class="math inline">\(0,39\)</span></td>
 </tr>
 <tr class="even">
 <td align="left">#garçons <span class="math inline">\(&lt;\)</span> #filles</td>
-<td align="left"><span class="math inline">\(\alpha=3,\phantom{.1}\beta=0.1\)</span></td>
-<td align="center"><span class="math inline">\(0.52\)</span></td>
+<td align="left"><span class="math inline">\(\alpha=3\phantom{,1};\beta=0,1\)</span></td>
+<td align="center"><span class="math inline">\(0,52\)</span></td>
 </tr>
 <tr class="odd">
 <td align="left">#garçons <span class="math inline">\(=\)</span> #filles</td>
-<td align="left"><span class="math inline">\(\alpha=4,\phantom{.1}\beta=4\)</span></td>
-<td align="center"><span class="math inline">\(0.46\)</span></td>
+<td align="left"><span class="math inline">\(\alpha=4\phantom{,1};\beta=4\)</span></td>
+<td align="center"><span class="math inline">\(0,46\)</span></td>
 </tr>
 <tr class="even">
 <td align="left">#garçons <span class="math inline">\(\neq\)</span> #filles</td>
-<td align="left"><span class="math inline">\(\alpha=0.1,\beta=0.1\)</span></td>
-<td align="center"><span class="math inline">\(0.45\)</span></td>
+<td align="left"><span class="math inline">\(\alpha=0,1;\beta=0,1\)</span></td>
+<td align="center"><span class="math inline">\(0,45\)</span></td>
 </tr>
 <tr class="odd">
 <td align="left">non informatif</td>
-<td align="left"><span class="math inline">\(\alpha=1,\phantom{.1}\beta=1\)</span></td>
-<td align="center"><span class="math inline">\(0.45\)</span></td>
+<td align="left"><span class="math inline">\(\alpha=1\phantom{,1};\beta=1\)</span></td>
+<td align="center"><span class="math inline">\(0,45\)</span></td>
 </tr>
 </tbody>
 </table>
@@ -192,7 +192,7 @@ où <span class="math inline">\(f(\boldsymbol{y}) = \int f(\boldsymbol{y}|\theta
 <li>puis pour le premier quartile : <em>Supposons que l’on vous dise que <span class="math inline">\(\theta\)</span> est en dessous de [telle valeur médiane], pouvez-vous alors déterminer une nouvelle valeur telle que <span class="math inline">\(\theta\)</span> ait autant de chances de se trouver au-dessus qu’au-dessous ?</em></li>
 <li>de façon similaire on détermine le troisième quartile…</li>
 </ul>
-<p>Des logiciels existent pour aider à l’élicitation des lois <em>a priori</em> par des experts : voir par exemple l’outil académique SHELF.<a href="#fn2" class="footnote-ref" id="fnref2"><sup>2</sup></a></p>
+<p>Des logiciels existent pour aider à l’élicitation des lois <em>a priori</em> par des experts : voir par exemple l’outil académique SHELF<a href="#fn2" class="footnote-ref" id="fnref2"><sup>2</sup></a><a href="#fn3" class="footnote-ref" id="fnref3"><sup>3</sup></a>.</p>
 <p>On peut également éliciter des lois <em>a priori</em> d’après les données de la littérature. L’idée est de définir les moments de la distribution <em>a priori</em> tels qu’ils donnent une probabilité raisonnable aux valeurs du paramètre qui ont été recensées dans la littérature. Si on propose un <em>a priori</em> normal de loi <span class="math inline">\(\mathcal{N}(\mu, \sigma^2)\)</span>, on peut par exemple choisir <span class="math inline">\(\mu\)</span> et <span class="math inline">\(\sigma\)</span> de telle sorte que la plus petite valeur donnée dans la littérature soit égale à <span class="math inline">\(\mu - 1.96\sigma\)</span> et la plus grande à <span class="math inline">\(\mu + 1.96\sigma\)</span> . Une approche plus élaborée est de maximiser la vraisemblance des valeurs de la littérature…</p>
 </div>
 <div id="la-quête-des-a-priori-non-informatifs" class="section level4">
@@ -207,7 +207,9 @@ Si <span class="math inline">\(\int f(y|\theta)c\,\text{d}\theta = K\)</span> (c
 <ul>
 <li><strong>Lois non-invariantes</strong></li>
 </ul>
-<p>La seconde difficulté vient de la non-invariance de la distribution uniforme pour des transformations non-linéaires des paramètres. En effet si on fait une transformation des paramètres <span class="math inline">\(\gamma = g(\theta)\)</span> la densité de <span class="math inline">\(\gamma\)</span> s’écrit : <span class="math inline">\(\pi(\gamma) = |J|\,\pi(\theta)\)</span>, où <span class="math inline">\(|J|\)</span> est le Jacobien de la transformation, c’est-à-dire le déterminant de la matrice jacobienne <span class="math inline">\(\textstyle J = \frac{\partial g^{-1}(\gamma)}{\partial \gamma}\)</span>. Par exemple si on prend une densité uniforme égale à 1 pour <span class="math inline">\(\theta\)</span> sur <span class="math inline">\((0, +\infty)\)</span> et que l’on fait la transformation <span class="math inline">\(\gamma = \log(\theta)\)</span>, on a <span class="math inline">\(g^{-1}(\gamma) = e^\gamma\)</span> et <span class="math inline">\(|J| = e^\gamma\)</span>. Donc on a <span class="math inline">\(\pi(\gamma) = e^\gamma\)</span>, ce qui n’est pas la caractérisation d’une loi uniforme. D’où le paradoxe suivant : si la loi uniforme pour <span class="math inline">\(\theta\)</span> traduit une absence totale de connaissance <em>a priori</em> sur <span class="math inline">\(\theta\)</span>, on devrait avoir aussi une absence totale d’information <em>a priori</em> sur <span class="math inline">\(\gamma\)</span>, ce qui devrait se traduire par une loi uniforme sur <span class="math inline">\(\gamma\)</span>. Or ce ne peut être le cas. Donc la loi uniforme ne peut pas être d’une manière générale la loi représentant une absence totale de connaissance <em>a priori</em>. C’est un argument central qui a conduit Fisher, en 1922, à proposer les estimateurs du maximum de vraisemblance, possédant eux une propriété d’invariance pour des transformations non-linéaires des paramètres.</p>
+<p>La seconde difficulté vient de la non-invariance de la distribution uniforme pour des transformations non-linéaires des paramètres. En effet si on fait une transformation des paramètres <span class="math inline">\(\gamma = g(\theta)\)</span> la densité de <span class="math inline">\(\gamma\)</span> s’écrit : <span class="math inline">\(\pi(\gamma) = |J|\,\pi(\theta)\)</span>, où <span class="math inline">\(|J|\)</span> est le Jacobien de la transformation, c’est-à-dire le déterminant de la matrice jacobienne <span class="math inline">\(\textstyle J = \frac{\partial g^{-1}(\gamma)}{\partial \gamma}\)</span>. Par exemple si on prend une densité uniforme égale à 1 pour <span class="math inline">\(\theta\)</span> sur <span class="math inline">\(]0, 1]\)</span> et que l’on fait la transformation <span class="math inline">\(\gamma = \log(\theta)\)</span>, on a <span class="math inline">\(g^{-1}(\gamma) = e^\gamma\)</span> et <span class="math inline">\(|J| = e^\gamma\)</span>. Donc on a <span class="math inline">\(\pi(\gamma) = e^\gamma\)</span>, ce qui n’est pas la caractérisation d’une loi uniforme. D’où le paradoxe suivant : si la loi uniforme pour <span class="math inline">\(\theta\)</span> traduit une absence totale de connaissance <em>a priori</em> sur <span class="math inline">\(\theta\)</span>, on devrait avoir aussi une absence totale d’information <em>a priori</em> sur <span class="math inline">\(\gamma\)</span>, ce qui devrait se traduire par une loi uniforme sur <span class="math inline">\(\gamma\)</span>. Or ce ne peut être le cas. Donc la loi uniforme ne peut pas être d’une manière générale la loi représentant une absence totale de connaissance <em>a priori</em>. C’est un argument central qui a conduit Fisher, en 1922, à proposer les estimateurs du maximum de vraisemblance, possédant eux une propriété d’invariance pour des transformations non-linéaires des paramètres.</p>
+<p>
+<em>Démonstration :</em> Soit <span class="math inline">\(F_X(x) = P(X &lt; x)\)</span> et considérons la transformation non linéaire <span class="math inline">\(Y = g(X)\)</span>. On a alors <span class="math inline">\(F_Y(y) = P(Y &lt; y) = P(g(X) &lt; y) = P(X &lt; g^{-1}(y))\)</span>. La densité s’obtient naturellement en dérivant par rapport à <span class="math inline">\(y\)</span> : <span class="math inline">\(\textstyle f_Y (y) = \frac{\partial g^{-1}(y)}{\partial y}f_X (g^{-1}(y))\)</span>. La formule s’étend au cas multidimensionnel où <span class="math inline">\(|J|\)</span> désigne le déterminant de la matrice jacobienne <span class="math inline">\(J\)</span> (matrice des dérivées partielles).</p>
 <p><strong>NB :</strong> Ceci ne veut pas dire que l’on ne puisse pas prendre une loi uniforme comme <em>a priori</em>, mais il faut avoir conscience que la loi uniforme ne vaut que pour une certaine paramétrisation…</p>
 <p>Face à ces difficultés, différentes solutions ont été proposées. Elles ont montré qu’il n’y a pas de loi <em>a priori</em> complètement non-informative, mais on peut considérer certaines lois comme <strong>faiblement informatives</strong>.</p>
 </div>
@@ -220,8 +222,6 @@ où <span class="math inline">\(I\)</span> est la matrice d’information de Fis
 tandis que <span class="math inline">\(\pi(\gamma)\)</span> correspond bien à la même loi <em>a priori</em> sur <span class="math inline">\(\theta\)</span>. Prenons ici des notations plus
 rigoureuses, et notons les densités <span class="math inline">\(\pi_\theta(\cdot)\)</span> et <span class="math inline">\(\pi_\gamma(\cdot)\)</span>. <span class="math inline">\(\pi_\gamma(\cdot)\)</span> s’exprime en fonction de
 <span class="math inline">\(\pi_\theta(\cdot)\)</span> avec <span class="math inline">\(\pi_\gamma(\cdot) = \pi_\theta(\cdot)|J|\)</span>. On vérifie donc bien que <span class="math inline">\(\textstyle\sqrt{I(\gamma)} = \sqrt{I(\theta)}|J|\)</span>.</p>
-<p>
-<em>Démonstration :</em> Soit <span class="math inline">\(F_X(x) = P(X &lt; x)\)</span> et considérons la transformation non linéaire <span class="math inline">\(Y = g(X)\)</span>. On a alors <span class="math inline">\(F_Y(y) = P(Y &lt; y) = P(g(X) &lt; y) = P(X &lt; g^{-1}(y))\)</span>. La densité s’obtient naturellement en dérivant par rapport à <span class="math inline">\(y\)</span> : <span class="math inline">\(\textstyle f_Y (y) = \frac{\partial g^{-1}(y)}{\partial y}f_X (g^{-1}(y))\)</span>. La formule s’étend au cas multidimensionnel où <span class="math inline">\(|J|\)</span> désigne le déterminant de la matrice jacobienne <span class="math inline">\(J\)</span> (matrice des dérivées partielles).</p>
 <p>Dans le cas multidimensionnel (le plus courant) la loi <em>a priori</em> de Jeffreys est définie comme :
 <span class="math display">\[\pi(\theta) \propto \sqrt{ | I(\theta) | }\]</span>
 où <span class="math inline">\(|I(\theta)|\)</span> est le déterminant de la matrice d’information de Fisher <span class="math inline">\(I(\theta)\)</span>. Cependant cette méthode est peu utilisée car d’une part les calculs peuvent être compliqués, et d’autre part elle peut donner des résultats un peu curieux. En effet dans le cas d’une vraisemblance normale par exemple, où l’on a 2 paramètres <span class="math inline">\(\theta\)</span> et <span class="math inline">\(\sigma\)</span>, l’<em>a priori</em> de Jeffreys multidimensionnel est <span class="math inline">\(1/\sigma^2\)</span>, ce qui est différent de <span class="math inline">\(\pi(\sigma) = 1/\sigma\)</span> obtenu dans le cas unidimensionnel… Dans la pratique la tendance est d’appliquer la loi <em>a priori</em> de Jeffreys séparément pour chaque paramètre et de définir la loi <em>a priori</em> conjointe par la multiplication des <em>a priori</em> pour chaque paramètre (faisant donc une hypothèse d’indépendance). Pour l’exemple normal avec deux paramètres, on obtient donc <span class="math inline">\(\pi(\theta,\sigma) = 1/\sigma\)</span>. Mais on note que ce n’est plus vraiment l’<em>a priori</em> de Jeffreys, en deux dimensions.</p>
@@ -245,7 +245,8 @@ où <span class="math inline">\(|I(\theta)|\)</span> est le déterminant de la m
 <div class="footnotes">
 <hr />
 <ol>
-<li id="fn1"><p>(<a href="http://www.tonyohagan.co.uk/shelf/" class="uri">http://www.tonyohagan.co.uk/shelf/</a>).<a href="#fnref1" class="footnote-back">↩︎</a></p></li>
-<li id="fn2"><p>(<a href="http://www.tonyohagan.co.uk/shelf/" class="uri">http://www.tonyohagan.co.uk/shelf/</a>).<a href="#fnref2" class="footnote-back">↩︎</a></p></li>
+<li id="fn1"><p>Cette conclusion a été confirmée depuis et semble être valable pour l’espèce humaine en général.<a href="#fnref1" class="footnote-back">↩︎</a></p></li>
+<li id="fn2"><p><a href="http://www.tonyohagan.co.uk/shelf/" class="uri">http://www.tonyohagan.co.uk/shelf/</a>.<a href="#fnref2" class="footnote-back">↩︎</a></p></li>
+<li id="fn3"><p><a href="https://CRAN.R-project.org/package=SHELF" class="uri">https://CRAN.R-project.org/package=SHELF</a>.<a href="#fnref3" class="footnote-back">↩︎</a></p></li>
 </ol>
 </div>
