--- a/content/cours/08-inference.html
+++ b/content/cours/08-inference.html
@@ -77,7 +77,7 @@ On remarque le lien entre cette formule et celle de la distribution marginale : 
 <h3>Propriétés asymptotiques – et fréquentistes – de la distribution <em>a posteriori</em></h3>
 <div id="théorème-de-convergence-de-doob" class="section level4">
 <h4>Théorème de convergence de Doob</h4>
-<p>Un résultat très intéressant est le comportement asymptotique de la distribution <em>a posteriori</em> sous certaines hypothèses (cas <span class="math inline">\(iid\)</span>, densités dérivables trois fois, existence de moments d’ordre 2). Il y a un premier résultat, le <strong>théorème de convergence de Doob</strong>, qui assure que la distribution <em>a posteriori</em> se concentre vers la vraie valeur du paramètre quand <span class="math inline">\(n \rightarrow \infty\)</span>. On peut le noter (convergence en Loi) :
+<p>Un résultat très intéressant est le comportement asymptotique de la distribution <em>a posteriori</em> sous certaines hypothèses (cas <span class="math inline">\(iid\)</span>, densités dérivables trois fois, existence de moments d’ordre 2). Il y a un premier résultat, le <strong>théorème de convergence de Doob</strong>, qui assure que la distribution <em>a posteriori</em> se concentre vers la “vraie” valeur (au sens fréquentiste) du paramètre quand <span class="math inline">\(n \rightarrow \infty\)</span>. On peut le noter (convergence en Loi) :
 <span class="math display">\[p(\theta|\boldsymbol{y}_n) \overset{\mathcal{L}}{\rightarrow} \delta_{\theta^*}\]</span></p>
 <p><img src="/cours/08-inference_files/figure-html/Posterior%20density%20Uniform-1.png" width="95%" /></p>
 
