--- a/content/cours/09-conclu.html
+++ b/content/cours/09-conclu.html
@@ -37,9 +37,9 @@ où <span class="math inline">\(p(\theta|\boldsymbol{y})\)</span> est la distrib
 <span class="math display">\[\pi(\theta) \propto \sqrt{I(\theta)} \quad \text{en unidimensionnel}\]</span>
 possédant la propriété d’invariance.</p></li>
 <li><p><strong>La moyenne <em>a posteriori</em>, le MAP et les intervalles de crédibilité</strong></p></li>
-<li><p><strong>La distribution prédictive :</strong>
-<span class="math display">\[f_{Y_{n+1}}(y|\boldsymbol{y}) = \int f_{Y_{n+1}} (y|\theta)p(\theta|\boldsymbol{y}) \,\text{d}\theta\]</span></p></li>
 </ol>
+<p><!--6. **La distribution prédictive :**
+    $$f_{Y_{n+1}}(y|\boldsymbol{y}) = \int f_{Y_{n+1}} (y|\theta)p(\theta|\boldsymbol{y}) \,\text{d}\theta$$--></p>
 </div>
 <div id="intérêt-de-lapproche-bayésienne" class="section level3">
 <h3>Intérêt de l’approche bayésienne</h3>
