--- a/content/lectures/02-bayesmodel.html
+++ b/content/lectures/02-bayesmodel.html
@@ -1,11 +1,11 @@
 ---
-title: "Bayesian modeling"
-linktitle: "Bayesian modeling"
-date: "2020-06-11"
-read_date: "2020-06-11"
+title: "Modélisation Bayésienne"
+linktitle: "Modélisation Bayésienne"
+date: "2020-11-30"
+class_date: "2020-12-01"
 menu:
   lectures:
-    parent: "Part I: Bayesian theory"
+    parent: "II Modélisation bayésienne"
     weight: 2
 type: docs
 bibliography: "../../static/bib/references.bib"
@@ -16,52 +16,54 @@ output:
     toc: true
 ---
 
+<link href="/rmarkdown-libs/font-awesome/css/fontawesome-all.min.css" rel="stylesheet" />
 
 <div id="TOC">
 <ul>
-<li><a href="#video-lecture">Video lecture</a><ul>
-<li><a href="#bayesian-modeling-part-1">Bayesian modeling part 1</a></li>
-<li><a href="#bayesian-modeling-part-2">Bayesian modeling part 2</a></li>
-<li><a href="#bayesian-modeling-part-3">Bayesian modeling part 3</a></li>
-<li><a href="#bayesian-modeling-priors">Bayesian modeling – priors</a></li>
-<li><a href="#bayesian-modeling-going-further">Bayesian modeling – going further</a></li>
+<li><a href="#leçon-vidéo">Leçon vidéo</a><ul>
+<li><a href="#modélisation-bayésienne-partie-1">Modélisation bayésienne partie 1</a></li>
+<li><a href="#modélisation-bayésienne-partie-2">Modélisation bayésienne partie 2</a></li>
+<li><a href="#modélisation-bayésienne-partie-3">Modélisation bayésienne partie 3</a></li>
+<li><a href="#modélisation-bayésienne-a-priori">Modélisation bayésienne — <em>a priori</em></a></li>
+<li><a href="#modélisation-bayésienne-extensions">Modélisation bayésienne –– extensions</a></li>
 </ul></li>
-<li><a href="#slides">Slides</a></li>
+<li><a href="#diaporamas">Diaporamas</a></li>
 </ul>
 </div>
 
-<div id="video-lecture" class="section level2">
-<h2>Video lecture</h2>
-<div id="bayesian-modeling-part-1" class="section level3">
-<h3>Bayesian modeling part 1</h3>
+<div id="leçon-vidéo" class="section level2">
+<h2>Leçon vidéo</h2>
+<div id="modélisation-bayésienne-partie-1" class="section level3">
+<h3>Modélisation bayésienne partie 1</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/8Ez-wWMohDg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 </div>
-<div id="bayesian-modeling-part-2" class="section level3">
-<h3>Bayesian modeling part 2</h3>
+<div id="modélisation-bayésienne-partie-2" class="section level3">
+<h3>Modélisation bayésienne partie 2</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/Wc1bCLNA4Q8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 </div>
-<div id="bayesian-modeling-part-3" class="section level3">
-<h3>Bayesian modeling part 3</h3>
+<div id="modélisation-bayésienne-partie-3" class="section level3">
+<h3>Modélisation bayésienne partie 3</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/c0yCMO-TwP0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 </div>
-<div id="bayesian-modeling-priors" class="section level3">
-<h3>Bayesian modeling – priors</h3>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/TtGldDmOHcw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+<div id="modélisation-bayésienne-a-priori" class="section level3">
+<h3>Modélisation bayésienne — <em>a priori</em></h3>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/SH19H_W59Pc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 <p>👉 <a href="http://www.tonyohagan.co.uk/shelf/"><em>Shelf software</em></a></p>
+<p>👉 <a href="http://www.tonyohagan.co.uk/shelf/"><em>SHELF <i class="fab  fa-r-project " style="color:#0085d6;"></i> package</em></a></p>
 </div>
-<div id="bayesian-modeling-going-further" class="section level3">
-<h3>Bayesian modeling – going further</h3>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/G50sTVCdN_8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+<div id="modélisation-bayésienne-extensions" class="section level3">
+<h3>Modélisation bayésienne –– extensions</h3>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/p67ql6pFZF8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 </div>
 </div>
-<div id="slides" class="section level2">
-<h2>Slides</h2>
-<p>The <strong>slides</strong> for the first part of this section are displayed below, and can be downloaded <a href="/slides/slidesModel1.pdf">here</a>.</p>
+<div id="diaporamas" class="section level2">
+<h2>Diaporamas</h2>
+<p>Le <strong>diaporama</strong> pour la première partie de cette section sont affichées ci-dessous, et peuvent être téléchargées <a href="/slides/slidesModel1.pdf">ici</a>.</p>
 <html>
 <body>
 <object data="/slides/slidesModel1.pdf##view=fit" type="application/pdf" width="420" height="237">
@@ -69,7 +71,7 @@ output:
 </object>
 </body>
 </html>
-<p>The <strong>slides</strong> for the second part of this section are displayed below, and can be downloaded <a href="/slides/slidesModel2.pdf">here</a>.</p>
+<p>Le <strong>diaporama</strong> pour la deuxième partie de cette section sont affichées ci-dessous, et peuvent être téléchargées [ici]](/slides/slidesModel2.pdf).</p>
 <html>
 <body>
 <object data="/slides/slidesModel2.pdf##view=fit" type="application/pdf" width="420" height="237">
@@ -77,7 +79,7 @@ output:
 </object>
 </body>
 </html>
-<p>The <strong>slides</strong> for the third part of this section are displayed below, and can be downloaded <a href="/slides/slidesModel3.pdf">here</a>.</p>
+<p>Le <strong>diaporama</strong> pour la troisième partie de cette section sont affichées ci-dessous, et peuvent être téléchargées <a href="/slides/slidesModel3.pdf">ici</a>.</p>
 <html>
 <body>
 <object data="/slides/slidesModel3.pdf##view=fit" type="application/pdf" width="420" height="237">
@@ -85,7 +87,7 @@ output:
 </object>
 </body>
 </html>
-<p>The <strong>slides</strong> for the fourth part of this section are displayed below, and can be downloaded <a href="/slides/slidesPriors.pdf">here</a>.</p>
+<p>Le <strong>diaporama</strong> pour la quatrième partie de cette section sont affichées ci-dessous, et peuvent être téléchargées <a href="/slides/slidesPriors.pdf">ici</a>.</p>
 <html>
 <body>
 <object data="/slides/slidesPriors.pdf##view=fit" type="application/pdf" width="420" height="237">
@@ -93,7 +95,7 @@ output:
 </object>
 </body>
 </html>
-<p>The <strong>slides</strong> for the fifth part of this section are displayed below, and can be downloaded <a href="/slides/slidesGoingFurther.pdf">here</a>.</p>
+<p>Le <strong>diaporama</strong> pour la cinquième partie de cette section sont affichées ci-dessous, et peuvent être téléchargées <a href="/slides/slidesGoingFurther.pdf">ici</a>.</p>
 <html>
 <body>
 <object data="/slides/slidesGoingFurther.pdf##view=fit" type="application/pdf" width="420" height="237">
