--- a/content/lectures/03-bayesinference.html
+++ b/content/lectures/03-bayesinference.html
@@ -1,11 +1,11 @@
 ---
-title: "Bayesian inference"
-linktitle: "Bayesian inference"
+title: "Inférence bayésienne"
+linktitle: "Inférence bayésienne"
 date: "2020-06-11"
 read_date: "2020-06-11"
 menu:
   lectures:
-    parent: "Part I: Bayesian theory"
+    parent: "II Modélisation bayésienne"
     weight: 3
 type: docs
 bibliography: "../../static/bib/references.bib"
@@ -19,37 +19,49 @@ output:
 
 <div id="TOC">
 <ul>
-<li><a href="#video-lecture">Video lecture</a><ul>
-<li><a href="#bayesian-inference-part-1-point-estimates">Bayesian inference part 1: point estimates</a></li>
-<li><a href="#bayesian-inference-part-2-uncertainty">Bayesian inference part 2: uncertainty</a></li>
-<li><a href="#bayesian-asymptotics">Bayesian asymptotics</a></li>
+<li><a href="#leçons-video">Leçons video</a><ul>
+<li><a href="#inférence-bayésienne-partie-1-estimateur-ponctuels">Inférence Bayésienne partie 1: estimateur ponctuels</a></li>
+<li><a href="#inférence-bayésienne-partie-2-map">Inférence Bayésienne partie 2: MAP</a></li>
+<li><a href="#inférence-bayésienne-partie-3-espérance">Inférence Bayésienne partie 3: espérance</a></li>
+<li><a href="#inférence-bayésienne-partie-4-incertitude">Inférence Bayésienne partie 4: incertitude</a></li>
+<li><a href="#inférence-bayésienne-asymptotique">Inférence Bayésienne — asymptotique</a></li>
 </ul></li>
-<li><a href="#slides">Slides</a></li>
+<li><a href="#diaporamas">Diaporamas</a></li>
 </ul>
 </div>
 
-<div id="video-lecture" class="section level2">
-<h2>Video lecture</h2>
-<div id="bayesian-inference-part-1-point-estimates" class="section level3">
-<h3>Bayesian inference part 1: point estimates</h3>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/jFg7iYNFbQw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+<div id="leçons-video" class="section level2">
+<h2>Leçons video</h2>
+<div id="inférence-bayésienne-partie-1-estimateur-ponctuels" class="section level3">
+<h3>Inférence Bayésienne partie 1: estimateur ponctuels</h3>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/jYhctgHLs9A" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 </div>
-<div id="bayesian-inference-part-2-uncertainty" class="section level3">
-<h3>Bayesian inference part 2: uncertainty</h3>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/9QU9OnpgkH4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+<div id="inférence-bayésienne-partie-2-map" class="section level3">
+<h3>Inférence Bayésienne partie 2: MAP</h3>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/K8SDbqXAsb8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 </div>
-<div id="bayesian-asymptotics" class="section level3">
-<h3>Bayesian asymptotics</h3>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/5b7e4IbixVM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+<div id="inférence-bayésienne-partie-3-espérance" class="section level3">
+<h3>Inférence Bayésienne partie 3: espérance</h3>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/7u5KokmXOHE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
+</div>
+<div id="inférence-bayésienne-partie-4-incertitude" class="section level3">
+<h3>Inférence Bayésienne partie 4: incertitude</h3>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/4E7p5T4rLKM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+</iframe>
+</div>
+<div id="inférence-bayésienne-asymptotique" class="section level3">
+<h3>Inférence Bayésienne — asymptotique</h3>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/RdhyuOl17OM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
 </iframe>
 <p>👉 <a href="http://students.brown.edu/seeing-theory/bayesian-inference/index.html#section3"><em>Seeing Theory</em>, Brown University</a></p>
 </div>
 </div>
-<div id="slides" class="section level2">
-<h2>Slides</h2>
-<p>The <strong>slides</strong> for the first part of this section are displayed below, and can be downloaded <a href="/slides/slidesInference.pdf">here</a>.</p>
+<div id="diaporamas" class="section level2">
+<h2>Diaporamas</h2>
+<p>Le <strong>diaporama</strong> pour la première partie de cette section sont affichées ci-dessous, et peuvent être téléchargées <a href="/slides/slidesInference.pdf">ici</a>.</p>
 <html>
 <body>
 <object data="/slides/slidesInference.pdf##view=fit" type="application/pdf" width="420" height="237">
@@ -57,7 +69,7 @@ output:
 </object>
 </body>
 </html>
-<p>The <strong>slides</strong> for the second part of this section are displayed below, and can be downloaded <a href="/slides/slidesUncertainty.pdf">here</a>.</p>
+<p>Le <strong>diaporama</strong> pour la deuxième partie de cette section sont affichées ci-dessous, et peuvent être téléchargées <a href="/slides/slidesUncertainty.pdf">ici</a>.</p>
 <html>
 <body>
 <object data="/slides/slidesUncertainty.pdf##view=fit" type="application/pdf" width="420" height="237">
@@ -65,7 +77,7 @@ output:
 </object>
 </body>
 </html>
-<p>The <strong>slides</strong> for the third part of this section are displayed below, and can be downloaded <a href="/slides/slidesAsymptotics.pdf">here</a>.</p>
+<p>Le <strong>diaporama</strong> pour la troisième partie de cette section sont affichées ci-dessous, et peuvent être téléchargées <a href="/slides/slidesAsymptotics.pdf">ici</a>.</p>
 <html>
 <body>
 <object data="/slides/slidesAsymptotics.pdf##view=fit" type="application/pdf" width="420" height="237">
