--- a/content/lectures/_index.html
+++ b/content/lectures/_index.html
@@ -1,8 +1,9 @@
 ---
-title: Videos, slides and lecture notes
+title: "Présentation"
+linktitle: "Organisation"
 menu:
   lectures:
-    parent: Overview
+    parent: Présentation
     weight: 1
 type: docs
 weight: 1
@@ -10,28 +11,8 @@ weight: 1
 
 
 
-<div id="presentation" class="section level3">
-<h3>Presentation</h3>
-<p>This courses is divided into 3 parts:</p>
-<ol style="list-style-type: decimal">
-<li><a href="01-introbayestheory">Baysian theory</a></li>
-<li><a href="05-estimateprior">Bayesian computation</a></li>
-<li><a href="09-postmortemreanalysis">Bayesian applications in biomedical sciences</a></li>
-</ol>
-<p>Each part is further divided into 3 or 4 sections, and several videos present the content of the topic in each section.</p>
-</div>
-<div id="videos-slides" class="section level3">
-<h3>Videos &amp; slides</h3>
-<p>For each part, a slides deck is provided and split into video capsules where I present the slides. Click on the sections on the left hand side menu to access those.</p>
-</div>
-<div id="lectures-notes" class="section level3">
-<h3>Lectures notes</h3>
-<p>The <strong>lecture notes</strong> for this course are displayed below, and can be downloaded <a href="/files/IntroBayesMed20_lectureNotes.pdf">here</a>. Those include further technical details (notably mathematical details) not required to follow along the class, but are being presented for the sake of completeness and for the interested reader.</p>
-<html>
-<body>
-<object data="/files/IntroBayesMed20_lectureNotes.pdf##view=fit" type="application/pdf" width="100%" height="900">
-<embed src="/files/IntroBayesMed20_lectureNotes.pdf##view=fit" type="application/pdf"/>
-</object>
-</body>
-</html>
+<div id="organisation" class="section level2">
+<h2>Organisation</h2>
+<p>Chacun des 4 chapitres du cours est diviser en plusieurs sections, et pour chaque section, plusieurs capsules vidéos en présente le contenu. À chaque fois, le diaporama présenté est également disponible au format pdf.
+Cliquer les différentes sous-sections afin d’accéder à leur contenu.</p>
 </div>
