--- a/content/schedule/index.html
+++ b/content/schedule/index.html
@@ -5,7 +5,7 @@ slug: schedule
 
 
 
-<p>Dû au format distanciel actuel, nous allons adopté une organisation de “classe inversée” pour ce cours.</p>
+<p>Dû au format distanciel actuel, nous allons adopter une organisation de “classe inversée” pour ce cours.</p>
 <div id="plan-du-site" class="section level2">
 <h2>Plan du site</h2>
 <ul>
@@ -14,6 +14,7 @@ slug: schedule
 <li><a href="/TD/"><strong>Travaux dirigés</strong></a> <i class="fas fa-pencil-alt"></i> : cette page contient des exercices à réaliser à la main pour s’approprier les concepts du cours.</li>
 <li><a href="/practicals/"><strong>Travaux pratiques</strong></a> <i class="fas fa-laptop-code"></i> : cette page contient des exercices logiciels à réaliser sous <code>R</code> avec <code>JAGS</code>.</li>
 <li><a href="/projet/"><strong>Evaluation</strong></a> <i class="fas fa-user-graduate"></i> : cette page contient des exercices logiciels à réaliser sous <code>R</code> avec <code>JAGS</code>.</li>
+<li><a href="/readings/"><strong>Lectures</strong></a> <i class="fas fa-newspaper"></i> : cette page contiens des références supplémentaire, dont la lecture (optionnelle) peut venir complémenter le cours.</li>
 </ul>
 </div>
 <div id="emploi-du-temps" class="section level2">
@@ -168,10 +169,10 @@ slug: schedule
 <td align="left">Exercice 4</td>
 </tr>
 <tr class="odd">
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
-<td align="left"></td>
+<td align="left"><strong>Mardi 15 décembre</strong></td>
+<td align="left">9h-12h</td>
+<td align="left">📹 👨‍💻 ❓ Suivi de Projet</td>
+<td align="left"><a href="/projet/">Évaluation</a></td>
 </tr>
 </tbody>
 </table>
